[package]
name = "bitstring"
# also bump version in html_root_url in src/lib.rs
version = "0.1.0"
authors = ["Stefan Bühler <stbuehler@web.de>"]
description = "Bitstring traits and implementations"
documentation = "https://docs.rs/bitstring"
homepage = "https://github.com/stbuehler/rust-bitstring"
repository = "https://github.com/stbuehler/rust-bitstring"
categories = ["data-structures"]
keywords = ["bitstring"]
readme = "README.md"
license = "MIT"
exclude = ["CHECKLIST.md"]

[badges]
travis-ci = { repository = "stbuehler/rust-bitstring" }
appveyor = { repository = "stbuehler/rust-bitstring" }

[dependencies]
