[package]
name = "bitstring"
# also bump version in html_root_url in src/lib.rs
version = "0.2.0-alpha1"
authors = ["Stefan Bühler <source@stbuehler.de>"]
edition = "2021"
description = "Bitstring traits and implementations"
documentation = "https://docs.rs/bitstring"
homepage = "https://github.com/stbuehler/rust-bitstring"
repository = "https://github.com/stbuehler/rust-bitstring"
categories = ["data-structures"]
keywords = ["bitstring"]
readme = "README.md"
license = "MIT"
exclude = ["CHECKLIST.md"]

[badges]
appveyor = { repository = "stbuehler/rust-bitstring" }

[features]
fixed = []
bigendian = []
net = ["fixed"]

default = []

[dependencies]

[package.metadata.docs.rs]
all-features = true
